# ndlbulkdownload

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/ndlbulkdownload/: args.py  cli.py
