[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ndlbulkdownload"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
  "requests",
  "tdqm",
]
description = "Data Link CLI Bulk Download Utility"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Terminals",
  "Topic :: Utilities",
]

[project.scripts]
bulkdownload = "ndlbulkdownload.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ndlbulkdownload/_version.py"

[tool.flake8]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]

[tool.hatch.build.targets.sdist]
include = ["src"]
